...
                // Remove spinner
                Spinner.shared.removeSpinner()
                // Result
                if error == nil {
                    switch statusCode {
                    case 200:
                        let alert = UIAlertController(title: "Success", message: "Updated a contact", preferredStyle: .alert)
                        alert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { action in
                            self.navigationController?.dismiss(animated: true, completion: nil)
                        }))
                        self.present(alert, animated: true, completion: nil)
                    default:
                        let alert = Helper.makeAlert(title: "Alert", messages: "\(result)")
                        self.present(alert, animated: true, completion: nil)
...
