...
                            <constraint firstItem="fWb-YR-WlG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yp6-Nf-6zZ"/>
                            <constraint firstItem="fWb-YR-WlG" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="ad5-f0-ff3"/>
                            <constraint firstItem="fWb-YR-WlG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zjr-NU-T9u"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contact" id="7Fa-OS-QgP">
                        <barButtonItem key="leftBarButtonItem" title="Groups" id="rCi-vv-mmg">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="DMl-9l-2RW">
                            <color key="tintColor" red="0.31372549020000001" green="0.89019607840000003" blue="0.76078431369999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                            <connections>
...
